# wizer

./: .gitignore  .npmrc  Cargo.toml  README.md  rustfmt.toml
.github/actions/github-release/: README.md  action.yml  package-lock.json  package.json
.github/workflows/: ci.yaml  ci.yml  e2e.yml  release.yml
benches/: regex_bench.control.wasm  regex_bench.wizer.wasm  uap_bench.control.wasm
benches/regex-bench/src/: lib.rs
benches/uap-bench/src/: lib.rs
cli/: Cargo.toml
component-init/: Cargo.toml
component-init/cli/: Cargo.toml
component-init/cli/src/: main.rs
component-init/guest-rust/: Cargo.toml
component-init/guest-rust/macro/: Cargo.toml
component-init/guest-rust/macro/src/: lib.rs
component-init/guest-rust/src/: lib.rs
component-init/test-programs/: Cargo.toml
component-init/test-programs/artifacts/: Cargo.toml
component-init/transform/: Cargo.toml
component-init/transform/src/: lib.rs
component-init/wasmtime/: Cargo.toml
component-init/wasmtime/src/: lib.rs
component-init/wasmtime/tests/: rust.rs  wat.rs
fuzz/fuzz_targets/: same_result.rs
include/: wizer.h
npm/wizer/: package-lock.json  package.json  update.js
src/: lib.rs  rewrite.rs  snapshot.rs  translate.rs
test-programs/: Cargo.toml
test-programs/artifacts/: build.rs
tests/: make_linker.rs  preloads.rs  regex_test.wasm  tests.rs
tests/fixtures/components/hello-world/: component.js
tests/fixtures/components/hello-world/wit/: component.wit
tests/regex-test/: README.md
tests/regex-test/src/: lib.rs
transform/: Cargo.toml
transform/src/: lib.rs
wasmtime/: Cargo.toml
wasmtime/src/: lib.rs
wasmtime/tests/: rust.rs
