[package]
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]
categories = ["command-line-utilities", "development-tools", "wasm"]
description = "The WebAssembly Pre-Initializer"
documentation = "https://docs.rs/wizer"
edition = "2018"
exclude = ["**.wasm"]
homepage = "https://github.com/bytecodealliance/wizer"
license = "Apache-2.0 WITH LLVM-exception"
name = "wizer"
readme = "./README.md"
repository = "https://github.com/bytecodealliance/wizer"
version = "10.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "wizer"
required-features = ["cli"]

[dependencies]
anyhow = { version = "1.0.97", optional = true }
env_logger = { version = "0.11.8", optional = true }
clap = { version = "4.5", optional = true, features = ['derive'] }
wasmtime = { workspace = true }
wasmtime-wizer = { workspace = true }
wasmtime-wasi = { workspace = true, features = ["p1"] }

[features]
# Enable this dependency to get messages with WAT disassemblies when certain
# internal panics occur.
wasmprinter = ['wasmtime-wizer/wasmprinter']

cli = ['dep:clap', 'dep:env_logger', 'dep:anyhow', 'wasmtime-wizer/clap']

[workspace.dependencies]
wasmprinter = "0.238.0"
wasmtime = { git = 'https://github.com/bytecodealliance/wasmtime' }
wasmtime-wasi = { git = 'https://github.com/bytecodealliance/wasmtime' }
wasmtime-wizer = { git = 'https://github.com/bytecodealliance/wasmtime' }

[dev-dependencies]
log = "0.4.27"
anyhow = "1.0.97"
criterion = "0.5.1"
env_logger = "0.11.8"
wasmprinter = { workspace = true }
wat = "1.238.0"
wasm-encoder = "0.238.0"
wasmparser = "0.238.0"

[workspace]
members = [
    "tests/regex-test",
]

[profile.bench]
debug = true

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(fuzzing)'] }
