[package]
version = "11.0.0"
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]
categories = ["command-line-utilities", "development-tools", "wasm"]
description = "The WebAssembly Pre-Initializer"
documentation = "https://docs.rs/wizer"
edition = "2018"
exclude = ["**.wasm"]
homepage = "https://github.com/bytecodealliance/wizer"
license = "Apache-2.0 WITH LLVM-exception"
name = "wizer"
readme = "./README.md"
repository = "https://github.com/bytecodealliance/wizer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "wizer"
required-features = ["cli"]

[dependencies]
anyhow = { workspace = true, optional = true }
clap = { workspace = true, optional = true, features = ['derive'] }
env_logger = { workspace = true, optional = true }
tokio = { workspace = true, features = ["macros"] }
wasmtime = { workspace = true, features = ["async", "anyhow"] }
wasmtime-wasi = { workspace = true, features = ["p1"] }
wasmtime-wizer = { workspace = true, features = ["wasmtime"] }

[features]
# Enable this dependency to get messages with WAT disassemblies when certain
# internal panics occur.
wasmprinter = ['wasmtime-wizer/wasmprinter']

cli = ['dep:clap', 'dep:env_logger', 'dep:anyhow', 'wasmtime-wizer/clap']

[workspace.dependencies]
anyhow = { version = "1.0.97" }
clap = { version = "4.5" }
criterion = { version = "0.5.1" }
env_logger = { version = "0.11.8" }
log = { version = "0.4.27" }
wasm-encoder = { version = "0.244.0" }
wasmparser = { version = "0.244.0" }
wasmprinter = { version = "0.244.0" }

# TODO: remove once wasmtime releases 42.0.0
#wasmtime = { version = "42.0.0" }
#wasmtime-wasi = { version = "42.0.0" }
#wasmtime-wizer = { version = "42.0.0" }

wasmtime = { git = "https://github.com/bytecodealliance/wasmtime" }
wasmtime-wasi = { git = "https://github.com/bytecodealliance/wasmtime" }
wasmtime-wizer = { git = "https://github.com/bytecodealliance/wasmtime" }

wat = { version = "1.244.0" }
tokio = { version = "1.49.0" }

[dev-dependencies]
anyhow = { workspace = true }
criterion = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
wasm-encoder = { workspace = true }
wasmparser = { workspace = true }
wasmprinter = { workspace = true }
wat = { workspace = true }

[workspace]
members = ["tests/regex-test"]

[profile.bench]
debug = true

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(fuzzing)'] }
