[package]
name = "component-init-transform"
description = "Tool for pre-initializing WebAssembly components"
license.workspace = true
edition.workspace = true
version = "0.2.0"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
futures.workspace = true
wasm-encoder.workspace = true
wasmparser.workspace = true
wasm-metadata.workspace = true
